--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<p>Current Word:</p>
 	<p>Guesses Left:</p>
 	<p>Letters Used:</p>
+	<p>Wins:</p>
 	</div>
 
 <script src="assets/javascript/game.js">
